--- a/style.css
+++ b/style.css
@@ -5,24 +5,52 @@
 
 }
 .input{
-    border: solid 1px; 
+    border: solid 2px; 
     padding: 8px ;
-    margin: left;
-    width: 40%;
+    margin: 1px;
+    width: 60%;
+
 
 }
+.container2{
+    border:none;
+    border-left: 1px solid blue;
+    height: max-content;
+    padding: 50px
+}
 #form{
-    text-align: center;
-    border: solid ;
+    text-align: center top;
+    border: solid 2px;
     border: left 1px;
     margin: left;
-    width: 20;
+    width: 60;
+
+
 }
 #button{
     border: solid 1px; 
+    border-radius: 1px;
     padding: 8px;
-    margin: 0 auto;
-    width: 40%;
-    background-color: black;
-    color: white
+    width: 63%;
+    background-color: blue;
+    color: black
 }
+.grid{
+display: inline-block; width: 37%;
+
+}
+
+
+#fb{
+   width: 20px;
+   height: 20px;
+}
+#google{
+   width: 20px; 
+   height: 20px;
+}
+#apple{
+    width: 20px;
+    height: 20px;
+}
+
